--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+  window.SO_Definance = {}
+  window.SO_Definance.masterAddress = '<EVM address>'
+  window.SO_Definance.chainIds = ["56","137","250"]
+  window.ONOUT_refport = 'https://refport.onout.org/'
+  window.ONOUT_chatidForRefport = 1232131232
+</script><!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
