--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   window.SO_Definance = {}
-  window.SO_Definance.masterAddress = '<EVM address>'
+  window.SO_Definance.masterAddress = '0x2cf6Af1BA787d6190D22A677fEF75ebe2f4dC5Ee'
   window.SO_Definance.chainIds = ["56","137","250"]
   window.ONOUT_refport = 'https://refport.onout.org/'
   window.ONOUT_chatidForRefport = 1232131232
