--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
 <script type="text/javascript">
   window.SO_Definance = {}
-  window.SO_Definance.masterAddress = '0x2cf6Af1BA787d6190D22A677fEF75ebe2f4dC5Ee'
-  window.SO_Definance.chainIds = ["56","137","33139"]
-  window.ONOUT_refport = 'https://refport.onout.org/'
-  window.ONOUT_chatidForRefport = 1232131232
+  window.SO_Definance.chainIds = ["56","33139"];
+</script>
 </script><!DOCTYPE html>
 <html lang="en">
   <head>
